added dto, fixed swagger docs
