# Exc_2/solution/docs/swagger.json
@@ -49,7 +49,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/model.Order"
+                            "$ref": "#/definitions/model.OrderDto"
                         }
                     }
                 ],
@@ -85,7 +85,7 @@
                 }
             }
         },
-        "/api/order/total": {
+        "/api/order/totalled": {
             "get": {
                 "description": "Returns all orders",
                 "produces": [
@@ -100,7 +100,11 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/model.Order"
+                                "type": "object",
+                                "additionalProperties": {
+                                    "type": "integer",
+                                    "format": "int64"
+                                }
                             }
                         }
                     }
@@ -130,10 +134,22 @@
             "type": "object",
             "properties": {
                 "amount": {
-                    "type": "number"
+                    "type": "integer"
                 },
                 "created_at": {
                     "type": "string"
+                },
+                "drink_id": {
+                    "description": "foreign key",
+                    "type": "integer"
+                }
+            }
+        },
+        "model.OrderDto": {
+            "type": "object",
+            "properties": {
+                "amount": {
+                    "type": "integer"
                 },
                 "drink_id": {
                     "description": "foreign key",
