# Exc_2/solution/rest/api.go
@@ -5,6 +5,7 @@ import (
 	"net/http"
 	"ordersystem/model"
 	"ordersystem/repository"
+	"time"
 
 	"github.com/go-chi/render"
 )
@@ -49,8 +50,8 @@ func GetOrders(db *repository.DatabaseHandler) http.HandlerFunc {
 // @tags 			Order
 // @Description 	Returns all orders
 // @Produce  		json
-// @Success 		200 {array} model.Order
-// @Router 			/api/order/total [get]
+// @Success 		200 {array} map[uint64]uint64
+// @Router 			/api/order/totalled [get]
 func GetOrdersTotal(db *repository.DatabaseHandler) http.HandlerFunc {
 	return func(w http.ResponseWriter, r *http.Request) {
 		// todo
@@ -66,7 +67,7 @@ func GetOrdersTotal(db *repository.DatabaseHandler) http.HandlerFunc {
 // @tags 			Order
 // @Description 	Adds an order to the db
 // @Accept 			json
-// @Param 			b body model.Order true "Order"
+// @Param 			b body model.OrderDto true "Order"
 // @Produce  		json
 // @Success 		200
 // @Failure     	400
@@ -79,8 +80,8 @@ func PostOrder(db *repository.DatabaseHandler) http.HandlerFunc {
 		// handle error and render Status 400
 		// add to db
 
-		order := model.Order{}
-		err := json.NewDecoder(r.Body).Decode(&order)
+		dto := model.OrderDto{}
+		err := json.NewDecoder(r.Body).Decode(&dto)
 
 		if err != nil {
 			render.Status(r, http.StatusBadRequest)
@@ -88,6 +89,11 @@ func PostOrder(db *repository.DatabaseHandler) http.HandlerFunc {
 			return
 		}
 
+		order := model.Order{
+			DrinkID:   dto.DrinkID,
+			Amount:    dto.Amount,
+			CreatedAt: time.Now(),
+		}
 		db.AddOrder(&order)
 		render.Status(r, http.StatusOK)
 		render.JSON(w, r, "ok")
